chore: update version to 2024.11.3 and modify occupancy sensor reference in automations

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ ha-code.md
 esphome/esp32-bluetooth-proxy-c94edc.yaml
 esphome/esp32-bluetooth-proxy-fd5bc4.yaml
 esphome/raspiaudio-muse-luxe-6b49cc.yaml
+onlineBackupsData/
