Add Home Assistant Voice configuration and remove unused AirSense file; update smart lighting blueprint with detailed descriptions and improved logic; delete Catppuccin theme files.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,6 +5,11 @@ webhook:
 my:
 api:
 
+logger:
+  # default: CRITICAL
+  # logs:
+  #   custom_components.area_occupancy: debug
+
 http:
   use_x_forwarded_for: true
   trusted_proxies:
