--- a/automations.yaml
+++ b/automations.yaml
@@ -86,7 +86,9 @@
   description: ''
   triggers:
   - trigger: state
-    entity_id: input_boolean.bedroom_sleep_mode
+    entity_id:
+    - input_boolean.bedroom_sleep_mode
+    to:
   conditions: []
   actions:
   - choose:
@@ -95,20 +97,14 @@
         entity_id: input_boolean.bedroom_sleep_mode
         state: 'on'
       sequence:
-      - action: media_player.play_media
-        target:
-          device_id: 8ccc102c468232982a7b44a9a8ed14fa
-        data:
-          media_content_id: rain sounds
-      - condition: not
-        conditions:
-        - condition: state
-          entity_id: binary_sensor.bedroom_tv_state
-          state: 'off'
       - action: media_player.turn_off
         data: {}
         target:
           device_id: d1aee826b1078df78bcf94d6b4087662
+          entity_id:
+          - media_player.bedroom_tv
+          - media_player.bedroom_tv_panasonic
+          - media_player.bedroom_tv_shield
     default: []
   mode: single
 - id: '1639919897579'
@@ -227,14 +223,15 @@
 - id: '1644169913326'
   alias: Home - Bin Reminder Update
   description: ''
-  trigger:
+  triggers:
   - trigger: state
-    entity_id: calendar.bin_collection_calendar
-  condition: []
-  action:
+    entity_id:
+    - calendar.bins_schedule
+  conditions: []
+  actions:
   - action: input_datetime.set_datetime
     data:
-      datetime: '{{ strptime(state_attr(''calendar.bin_collection_calendar'', ''start_time''),''%Y-%m-%d
+      datetime: '{{ strptime(state_attr(''calendar.bins_schedule'', ''start_time''),''%Y-%m-%d
         %H:%M:%S'') - timedelta( hours = 6 ) }}'
     target:
       entity_id: input_datetime.bin_reminder
@@ -444,7 +441,7 @@
           transition: 10
         target:
           entity_id: light.lounge_lamp
-  mode: single
+  mode: restart
 - id: '1703428459589'
   alias: Offline Zigbee Sensors
   description: ''
@@ -530,8 +527,8 @@
     from: 'on'
     to: 'off'
     for:
-      hours: 1
-      minutes: 0
+      hours: 0
+      minutes: 30
       seconds: 0
   conditions:
   - condition: sun
@@ -539,13 +536,12 @@
     before: sunset
   actions:
   - action: input_boolean.turn_off
+    data: {}
     target:
       entity_id:
+      - input_boolean.bedroom_sleep_mode
       - input_boolean.study_sleep_mode
       - input_boolean.lounge_sleep_mode
-      - input_boolean.bedroom_sleep_mode
-      - input_boolean.sleep_schedule
-    data: {}
   - action: input_boolean.turn_on
     metadata: {}
     data: {}
@@ -561,11 +557,6 @@
       - input_boolean.outside_automations
       - input_boolean.bathroom_automations
       - input_boolean.entrance_automations
-  - action: media_player.media_stop
-    metadata: {}
-    data: {}
-    target:
-      entity_id: media_player.bedroom_clock
   mode: single
 - id: '1731850444277'
   alias: Smart Lighting Control | Study
@@ -579,7 +570,7 @@
       enable_automation: input_boolean.study_automations
       area_lights:
         entity_id: light.study
-      occupancy_sensor: binary_sensor.study_occupancy
+      occupancy_sensor: binary_sensor.study_occupancy_status
       illuminance_sensor: sensor.study_illuminance
       illuminance_threshold_sensor: sensor.study_illuminance
       min_brightness: 0
@@ -592,7 +583,7 @@
       enable_automation: input_boolean.bedroom_automations
       area_lights:
         entity_id: light.bedroom
-      occupancy_sensor: binary_sensor.bedroom_occupancy
+      occupancy_sensor: binary_sensor.bedroom_occupancy_status
       illuminance_sensor: sensor.bedroom_illuminance
       illuminance_threshold_sensor: sensor.bedroom_illuminance_average
       sleep_mode_sensor: input_boolean.bedroom_sleep_mode
@@ -610,13 +601,14 @@
       enable_automation: input_boolean.entrance_automations
       area_lights:
         area_id: entrance
-      occupancy_sensor: binary_sensor.entrance_occupancy
+      occupancy_sensor: binary_sensor.entrance_occupancy_status
       illuminance_sensor: sensor.entrance_illuminance
       illuminance_threshold_sensor: sensor.entrance_illuminance_average
-      sleep_mode_sensor: input_boolean.entrance_sleep_mode
+      sleep_mode_sensor: binary_sensor.downstairs_sleep_mode
       people_home: binary_sensor.people_home
       guest_mode: input_boolean.guest_mode
       min_brightness: 0
+      idle_timeout: 60
 - id: '1731950885537'
   alias: Smart Lighting Control | Kitchen
   description: ''
@@ -626,7 +618,7 @@
       enable_automation: input_boolean.kitchen_automations
       area_lights:
         area_id: kitchen
-      occupancy_sensor: binary_sensor.kitchen_occupancy
+      occupancy_sensor: binary_sensor.kitchen_occupancy_status
       illuminance_sensor: sensor.kitchen_illuminance
       illuminance_threshold_sensor: sensor.kitchen_illuminance_average
       sleep_mode_sensor: input_boolean.kitchen_sleep_mode
@@ -635,6 +627,7 @@
       dimming_entity: binary_sensor.lounge_tv_state
       dim_brightness: 70
       min_brightness: 0
+      idle_timeout: 120
 - id: '1731950965695'
   alias: Smart Lighting Control | Hall
   description: ''
@@ -643,13 +636,14 @@
     input:
       enable_automation: input_boolean.hall_automations
       area_lights:
-        area_id: hall
-      occupancy_sensor: binary_sensor.hall_occupancy
+        entity_id: light.hall
+      occupancy_sensor: binary_sensor.hall_occupancy_status
       illuminance_sensor: sensor.hall_illuminance
       illuminance_threshold_sensor: sensor.hall_illuminance_average
       sleep_mode_sensor: binary_sensor.upstairs_sleep_mode
       people_home: binary_sensor.people_home
       guest_mode: input_boolean.guest_mode
+      idle_timeout: 60
 - id: '1731951067946'
   alias: Smart Lighting Control | Lounge
   description: ''
@@ -659,7 +653,7 @@
       enable_automation: input_boolean.lounge_automations
       area_lights:
         entity_id: light.lounge
-      occupancy_sensor: binary_sensor.lounge_occupancy
+      occupancy_sensor: binary_sensor.lounge_occupancy_status
       illuminance_sensor: sensor.lounge_illuminance
       illuminance_threshold_sensor: sensor.lounge_illuminance_average
       sleep_mode_sensor: input_boolean.lounge_sleep_mode
@@ -667,7 +661,7 @@
       guest_mode: input_boolean.guest_mode
       dimming_entity: binary_sensor.lounge_tv_state
       transition_time: 5
-      dim_brightness: 20
+      dim_brightness: 15
       min_brightness: 0
 - id: '1731951127934'
   alias: Smart Lighting Control | Toilet
@@ -678,28 +672,13 @@
       enable_automation: input_boolean.toilet_automations
       area_lights:
         area_id: toilet
-      occupancy_sensor: binary_sensor.toilet_occupancy
+      occupancy_sensor: binary_sensor.toilet_occupancy_status
       illuminance_sensor: sensor.toilet_illuminance
       illuminance_threshold_sensor: sensor.toilet_illuminance_average
-      sleep_mode_sensor: input_boolean.toilet_sleep_mode
+      sleep_mode_sensor: binary_sensor.downstairs_sleep_mode
       people_home: binary_sensor.people_home
       guest_mode: input_boolean.guest_mode
-- id: '1731956089902'
-  alias: Smart Lighting Control | Bathroom
-  description: ''
-  use_blueprint:
-    path: smart_lighting.yaml
-    input:
-      enable_automation: input_boolean.bathroom_automations
-      area_lights:
-        area_id: bathroom
-      occupancy_sensor: binary_sensor.bathroom_area_occupancy_status
-      illuminance_sensor: sensor.bathroom_illuminance
-      illuminance_threshold_sensor: sensor.bathroom_illuminance_average
-      sleep_mode_sensor: binary_sensor.upstairs_sleep_mode
-      people_home: binary_sensor.people_home
-      guest_mode: input_boolean.guest_mode
-      idle_timeout: 90
+      idle_timeout: 120
 - id: '1732128373701'
   alias: Heat Demand
   description: ''
@@ -747,4 +726,104 @@
           hvac_mode: 'off'
         target:
           device_id: a1dcec8316c0b8711defc8520761f3c1
+  mode: single
+- id: '1733297821141'
+  alias: Smart Lighting Control | Bathroom
+  description: ''
+  use_blueprint:
+    path: smart_lighting.yaml
+    input:
+      enable_automation: input_boolean.bathroom_automations
+      area_lights:
+        area_id: bathroom
+      occupancy_sensor: binary_sensor.bathroom_occupancy_status
+      illuminance_sensor: sensor.bathroom_illuminance
+      illuminance_threshold_sensor: sensor.bathroom_illuminance_threshold
+      sleep_mode_sensor: binary_sensor.upstairs_sleep_mode
+      people_home: binary_sensor.people_home
+      guest_mode: input_boolean.guest_mode
+      idle_timeout: 180
+- id: '1744905991634'
+  alias: Play Rain Sounds
+  description: ''
+  triggers:
+  - domain: mqtt
+    device_id: e1843aeb995175c54cf5ce647ae01015
+    type: action
+    subtype: single
+    id: sleepbutton
+    alias: Physical Sleep Button is Pressed
+    trigger: device
+  - entity_id: input_boolean.bedroom_sleep_mode
+    id: sleepmode
+    alias: Sleep Mode Boolean is Toggled
+    trigger: state
+  conditions: []
+  actions:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id: sleepbutton
+      sequence:
+      - choose:
+        - conditions:
+          - condition: state
+            entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+            state: playing
+          sequence:
+          - target:
+              entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+            action: media_player.media_pause
+            data: {}
+        - conditions:
+          - condition: not
+            conditions:
+            - condition: state
+              entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+              state: playing
+          sequence:
+          - target:
+              entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+            data:
+              media_content_id: media-source://media_source/local/Rain.mp3
+              media_content_type: audio/mpeg
+            metadata:
+              title: Rain.mp3
+              media_class: music
+            action: media_player.play_media
+          - condition: state
+            entity_id: input_boolean.bedroom_sleep_mode
+            state: 'off'
+          - target:
+              entity_id: input_boolean.bedroom_sleep_mode
+            action: input_boolean.turn_on
+            data: {}
+    - conditions:
+      - condition: trigger
+        id: sleepmode
+      sequence:
+      - choose:
+        - conditions:
+          - condition: state
+            entity_id: input_boolean.bedroom_sleep_mode
+            state: 'on'
+          sequence:
+          - target:
+              entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+            data:
+              media_content_id: media-source://media_source/local/Rain.mp3
+              media_content_type: audio/mpeg
+            metadata:
+              title: Rain.mp3
+              media_class: music
+            action: media_player.play_media
+        - conditions:
+          - condition: state
+            entity_id: input_boolean.bedroom_sleep_mode
+            state: 'off'
+          sequence:
+          - target:
+              entity_id: media_player.bedside_speaker_right_raspiaudio_muse_luxe_6b49cc
+            action: media_player.media_stop
+            data: {}
   mode: single
